# PostAIMSPy

./: LICENSE  README.md  install.sh  pyproject.toml
examples/: input.yaml
postaimspy/: __init__.py  __main__.py  align.py  cli.py  cluster.py  config.py  pipeline.py  rmsd.py  separate.py  utils.py
